--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=SevaSahyog
+spring.application.name = SevaSahyog
+spring.sql.console.enable = true
+spring.jpa.hibernate.ddl-auto = create
+spring.datasource.url = jdbc:mysql://localhost:3306/studentinfo
+spring.datasource.username = root
+spring.datasource.password = Pass@123
