--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,13 @@
 spring.application.name = SevaSahyog
 spring.sql.console.enable = true
+
+# for local database
+#spring.jpa.hibernate.ddl-auto = create
+#spring.datasource.url = jdbc:mysql://localhost:3306/studentinfo
+#spring.datasource.username = root
+#spring.datasource.password = Pass@123
+
+#for remote database
 spring.datasource.url=jdbc:sqlserver://sevasahyog.database.windows.net:1433;database=SevaSahyog;user=chirag@sevasahyog;password={your_password_here};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 spring.datasource.username=chirag@sevasahyog
 spring.datasource.password=Android@2024
