database - changed properties according to new database, created at render.com

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,9 @@ spring.sql.console.enable = true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:postgresql://dpg-crjsb8tds78s73edo5pg-a.oregon-postgres.render.com/seva_sehyog
-spring.datasource.username=chirag_nikam
-spring.datasource.password=SlfabGlCtMIZ6JPvZTMTgJXN4ocyrsNJ
+#spring.datasource.url=jdbc:postgresql://dpg-crjsb8tds78s73edo5pg-a.oregon-postgres.render.com/seva_sehyog
+
+spring.datasource.url=jdbc:postgresql://dpg-css27k52ng1s73af0nn0-a.oregon-postgres.render.com/sevasehyog
+spring.datasource.username=sevasehyog_user
+spring.datasource.password=fozjyBE7g75bRIRg99vmTylwzmSTSYRP
 spring.datasource.database-platform=org.hibernate.dialect.PostgreSQLDialect
